<resources>
    <string name="app_name">Get Outside</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="google_app_id">838187262843</string>

    <string name="featureServiceURL">https://services.arcgisonline.com/ArcGIS/rest/services/NatGeo_World_Map/MapServer</string>
    <string name="mapserviceURL">http://nowcoast.noaa.gov/arcgis/rest/services/nowcoast/analysis_meteohydro_sfc_qpe_time/MapServer</string>
    <string name="token">SQyga9ItRgLHBrGM8AEVnhPLY8MyUg1t7o3UF15NKvD-_faDM4mMZJoKWtlYs1WQCtVTC1nSGdhqEXXauHHM-Fi8r8T1VZxW_mOUaky5COU0_3PUJTtyJ2IRWVwGock4</string>
    <string name="gps_provider_disabled">GPS Location Services are unavailable!</string>
    <string name="network_provider_disabled">Network Location Services are unavailable!</string>
    <string name="both_gps_and_network_disabled">GPS and Network Location Services are both unavailable!</string>
    <string name="enable_background_scanning">Please enable background scanning!</string>
    <string name="enable_wifi">Please enable wifi for accurate locations!</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="play_services_dialog_cancel_toast">The Geotrigger SDK can\'t run without Google Play Services.</string>
    <string name="hello_world"> </string>
    <string name="action_stop">Stop Tracking</string>

    <!-- basemap menu items -->
    <string name="StreetMapMenu">Streets</string>
    <string name="TopoMenu">Topographic</string>
    <string name="GrayMenu">Gray</string>
    <string name="OceanMenu">Oceans</string>
    <string name="weathermap">Weather</string>
    <string name="buttonString">Mark It!</string>
    <string name="switch2String">Get Out!</string>
    <string name="switch1String">Weather</string>
    <string name="title_activity_location_fail">LocationFailActivity</string>
    <string name="title_activity_place_name">PlaceNameActivity</string>

</resources>
